Project

General

Profile

Actions

Bug #52907

closed

dpdk stack segment fault

Added by chunsong feng over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
msgr
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Thread 8 "msgr-worker-0" received signal SIGSEGV, Segmentation fault.
[Switching to Thread 0xfffff1f7c880 (LWP 1211362)]
0x0000fffff7f49da0 in pthread_mutex_lock () from /lib64/libpthread.so.0
(gdb) bt
#0 0x0000fffff7f49da0 in pthread_mutex_lock () from /lib64/libpthread.so.0
#1 0x0000fffff727ba1c in _gthread_mutex_lock (_mutex=0xaaaa0000000a)
at /usr/include/c++/8/aarch64-redhat-linux/bits/gthr-default.h:748
#2 0x0000fffff727be14 in std::mutex::lock (this=0xaaaa0000000a) at /usr/include/c++/8/bits/std_mutex.h:103
#3 0x0000fffff74c8504 in Worker::init_done (this=0xaaaa00000002)
at /home/rpmbuild/BUILD/ceph-17.0.0-8081-gce076c6e759/src/msg/async/Stack.h:272
#4 0x0000fffff74c69c4 in NetworkStack::<lambda()>::operator()(void) const (_closure=0xaaaaab3e9d40)
at /home/rpmbuild/BUILD/ceph-17.0.0-8081-gce076c6e759/src/msg/async/Stack.cc:47
#5 0x0000fffff74c7cb8 in std::_Function_handler<void(), NetworkStack::add_thread(Worker*)::<lambda()> >::_M_invoke(const std::_Any_data &) (
_functor=...) at /usr/include/c++/8/bits/std_function.h:297
#6 0x0000fffff74c588c in std::function<void ()>::operator()() const (this=0xaaaaab3e9d40)
at /usr/include/c++/8/bits/std_function.h:687
#7 0x0000fffff64660ac in dpdk_thread_adaptor (f=0xaaaaab3e9d40)
at /home/rpmbuild/BUILD/ceph-17.0.0-8081-gce076c6e759/src/msg/async/dpdk/DPDKStack.cc:60
#8 0x0000fffff5ae2544 in eal_thread_loop () from /lib64/librte_eal.so.21
#9 0x0000fffff7f47800 in start_thread () from /lib64/libpthread.so.0
#10 0x0000fffff5f417dc in thread_start () from /lib64/libc.so.6


Files

dpdk_segment_fault.txt (25.7 KB) dpdk_segment_fault.txt chunsong feng, 10/13/2021 02:41 AM
Actions #1

Updated by Kefu Chai over 2 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 43515
Actions #2

Updated by Neha Ojha over 2 years ago

  • Status changed from Fix Under Review to Resolved

Chunsong Feng: does this need to be backported? If so, please move the status to Pending Backport and populate the backport field.

Actions

Also available in: Atom PDF