src/msg/async/dpdk/DPDKStack.h
@@ -254,8 +254,9 @@ class DPDKStack : public NetworkStack {
   }
 
  public:
-  explicit DPDKStack(CephContext *cct): NetworkStack(cct)
-  {}
+  explicit DPDKStack(CephContext *cct): NetworkStack(cct) {
+    funcs.reserve(cct->_conf->ms_async_op_threads);
+  }
   virtual bool support_local_listen_table() const override { return true; }
 
   virtual void spawn_worker(std::function<void ()> &&func) override;
